--- a/wp-content/plugins/woocommerce/assets/css/woocommerce.less
+++ b/wp-content/plugins/woocommerce/assets/css/woocommerce.less
@@ -1746,7 +1746,7 @@ p.demo_store {
 
 /* =W Cloud Specific styles
 -------------------------------------------------------------- */
-.twentythirteen {
+.wcloud {
 	.entry-summary {
 		padding:0;
 	}
