--- a/wp-content/themes/wcloud/style.css
+++ b/wp-content/themes/wcloud/style.css
@@ -573,12 +573,12 @@ button,
 input[type="submit"],
 input[type="button"],
 input[type="reset"] {
-	background: #e05d22; /* Old browsers */
-	background: -webkit-linear-gradient(top, #e05d22 0%, #d94412 100%); /* Chrome 10+, Safari 5.1+ */
-	background:   linear-gradient(to bottom, #e05d22 0%, #d94412 100%); /* W3C */
+	background: #75BAE4; /* Old browsers */
+	background: -webkit-linear-gradient(top, #75BAE4 0%, #75BAE4 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom,#75BAE4 0%, #75BAE4 100%); /* W3C */
 	border: none;
-	border-bottom: 3px solid #b93207;
-	border-radius: 2px;
+	border-bottom: 3px solid #75BAE4;
+	border-radius: 20px;
 	color: #fff;
 	display: inline-block;
 	padding: 11px 24px 10px;
@@ -2487,7 +2487,7 @@ footer.entry-meta {
 
 .site-footer {
 	background-color:#75BAE4;
-	color: #686758;
+	color: white;
 	font-size: 14px;
 	text-align: center;
 }
@@ -2498,7 +2498,7 @@ footer.entry-meta {
 }
 
 .site-footer a {
-	color: #686758;
+	color: white;
 }
 
 .site-footer .sidebar-container {
