--- a/wp-content/themes/wcloud/style.css
+++ b/wp-content/themes/wcloud/style.css
@@ -79,9 +79,9 @@ audio:not([controls]) {
 
 html {
 	font-size: 100%;
-	overflow-y: scroll;
+	/*overflow-y: scroll;
 	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;*/
 }
 
 html,
@@ -754,7 +754,6 @@ img.wp-smiley,
 	border-left: 1px solid #f2f2f2;
 	border-right: 1px solid #f2f2f2;
 	margin: 0 auto;
-	max-width: 1600px;
 	width: 100%;
 }
 
@@ -794,8 +793,6 @@ img.wp-smiley,
 	color: #141412;
 	display: block;
 	margin: 0 auto;
-	max-width: 1080px;
-	min-height: 230px;
 	padding: 0 20px;
 	text-decoration: none;
 	width: 100%;
@@ -835,7 +832,7 @@ img.wp-smiley,
 ul.nav-menu,
 div.nav-menu > ul {
 	margin: 0;
-	padding: 0 40px 0 0;
+	padding: 0;
 }
 
 .nav-menu li {
@@ -848,7 +845,7 @@ div.nav-menu > ul {
 	display: block;
 	font-size: 15px;
 	line-height: 1;
-	padding: 15px 20px;
+	padding: 5px 20px;
 	text-decoration: none;
 }
 
@@ -908,10 +905,10 @@ ul.nav-menu li:hover > ul,
 
 /* Navbar */
 .navbar {
-	/* background-color: #f7f5e7; */
+	/* background-color: #f7f5e7;
 	margin: 0 auto;
 	max-width: 1600px;
-	width: 100%;
+	width: 100%; */
 }
 
 .site-header .search-form {
